--- a/greeting-config.yml
+++ b/greeting-config.yml
@@ -10,3 +10,9 @@ logging: # <----New sections below
   level:
     io:
       pivotal: DEBUG
+
+greeting:
+  displayFortune: true
+
+
+quoteServiceURL: http://quote-service-dev.cfapps.io/quote
